Lưu thay đổi tạm thời trên master

--- a/index.html
+++ b/index.html
@@ -866,26 +866,27 @@
         <!-- End -->
 
         <!-- <div class="ct-bg-footer"> -->
-            <div class="">
-                <div class="container mx-auto relative">
+            <div class="" >
+                <div class="container mx-auto relative banner-tour-guider">
                   <!-- Card -->
-                  <div class="ct-bg-lightblue shadow-lg rounded-lg flex flex-col md:flex-row items-center p-8 md:p-12 max-w-4xl mx-auto">
-                    <div class="grid grid-cols-12">
+                  <div class="ct-bg-lightblue shadow-lg rounded-lg flex flex-col md:flex-row items-center p-8 md:p-12 max-w-4xl mx-auto child-banner-tour-guider">
+                    <div class="grid grid-cols-12" style="height: 371px;">
                         <!-- Hình ảnh -->
-                    <div class="lg:col-span-3">
+                        <div class="lg:col-span-1">
+                            
+                          </div>
+                        <div class="lg:col-span-3" style="position: relative;top: -150px;">
                         <img src="assets/images/client/user.png" alt="Person" class="rounded-lg m-6">
                       </div>
                       <div class="lg:col-span-8">
 
                       <!-- Nội dung -->
-                      <div class="text-center md:text-left mt-16 items-center">
-                        <h2 class="text-2xl font-bold text-blue-500 mb-4">Bạn Đang Là Một Hướng Dẫn Viên?</h2>
+                      <div class="text-left md:text-left mt-16 mx-5 items-left">
+                        <h2 class="text-4xl font-bold text-blue-500 mb-4 text-sky-600">Bạn Đang Là Một Hướng Dẫn Viên?</h2>
                         <p class="text-gray-600 mb-6">
                           Tạo ngay profile của mình để tiếp cận với khách hàng.
                         </p>
-                        <button class="bg-blue-500 text-white px-6 py-3 rounded-md font-medium hover:ct-bg-lightblue transition">
-                          Tạo ngay
-                        </button>
+                        <a href="#" class="py-2 px-5 inline-block tracking-wide align-middle duration-500 text-base text-center bg-sky-500 text-white rounded-md">Tạo ngay</a>
                       </div>
                       </div>
                     </div>
@@ -899,7 +900,7 @@
 
         <!-- Footer Start -->
         <footer class="footer ct-bg-footer relative text-white dark:text-gray-200">    
-            <div class="container relative">
+            <div class="container relative top-50" >
                 <div class="grid grid-cols-12">
                     <div class="col-span-12">
                         <div class="py-[60px] px-0">
