--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!-- Mirrored from shreethemes.in/travosy/layouts/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 04 Dec 2024 02:17:07 GMT -->
 <head>
         <meta charset="UTF-8">
-        <title>Travosy - Tour & Travels Agency Tailwind CSS Template</title>
+        <title>Tour Guide</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta content="Tour & Travels Agency Tailwind CSS Template" name="description">
         <meta content="Tour, Travels, agency, business, corporate, tour packages, journey, trip, tailwind css, Admin, Landing" name="keywords">
@@ -15,7 +15,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         <!-- favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="assets/images/logo-dark.png">
 
         <!-- Css -->
         <link href="assets/libs/tobii/css/tobii.min.css" rel="stylesheet">
